[gd_scene load_steps=10 format=3 uid="uid://bj38hnybjjy0"]

[ext_resource type="Script" uid="uid://dhnvehwv23b3o" path="res://scenes/gameplaymechanics/button.gd" id="1_qg4im"]
[ext_resource type="Texture2D" uid="uid://c55fj5hfdsanw" path="res://sprites/gameplay/button/button0003.png" id="1_qq28v"]
[ext_resource type="Texture2D" uid="uid://bjatn4fi34uc2" path="res://sprites/gameplay/button/button0001.png" id="2_y77jp"]
[ext_resource type="Texture2D" uid="uid://nquraysagl2t" path="res://sprites/gameplay/button/button0002.png" id="3_fx7uu"]
[ext_resource type="AudioStream" uid="uid://c5t2tqplxk71p" path="res://sfx/gameplay/button/sfx_button_on.ogg" id="5_wxtuo"]
[ext_resource type="AudioStream" uid="uid://clpvk5fdeqtyx" path="res://sfx/gameplay/button/sfx_button_off.ogg" id="6_s4ff1"]

[sub_resource type="SpriteFrames" id="SpriteFrames_6fqk1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_qq28v")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_y77jp")
}, {
"duration": 1.0,
"texture": ExtResource("3_fx7uu")
}],
"loop": false,
"name": &"press",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hh4ey"]
size = Vector2(91, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_118sr"]
size = Vector2(68, 25)

[node name="Button" type="RigidBody2D"]
script = ExtResource("1_qg4im")

[node name="ButtonSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_6fqk1")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_hh4ey")

[node name="ButtonPressedOn" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_wxtuo")

[node name="ButtonPressedOff" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_s4ff1")

[node name="ButtonTrigger" type="Area2D" parent="."]

[node name="TriggerShape" type="CollisionShape2D" parent="ButtonTrigger"]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_118sr")

[connection signal="area_entered" from="ButtonTrigger" to="." method="_on_button_trigger_area_entered"]
[connection signal="area_exited" from="ButtonTrigger" to="." method="_on_button_trigger_area_exited"]
[connection signal="body_entered" from="ButtonTrigger" to="." method="_on_button_trigger_body_entered"]
[connection signal="body_exited" from="ButtonTrigger" to="." method="_on_button_trigger_body_exited"]
